--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,17 +1,21 @@
-<DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http:www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+            "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <meta charset="US-ASCII">
 <title>Login Page</title>
 </head>
-</html>
-<form action="LoginServletmethod="post">
-Username:<input type="text" name="user">
-<br>
-Password:<input type="password" name="pwd>
-<br>
-<input type="submit"value="Login>
-</form>
+<body>
+ <form>  
+        <div class="container">   
+            <label>Username : </label>   
+            <input type="text" placeholder="Enter Username" name="username" required>  
+            <br>
+            <label>Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password" required>  
+            <button type="submit">Login</button>   
+            
+        </div>   
+    </form>    
 </body>
 </html>
